all pages done start css

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image: url("https://www.1daywebsiteutah.com/wp-content/uploads/2015/11/wood-background-color-768x576.png");
 }
 
 code {
